# heisenberg-agent

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RELEASE_NOTES.md  pyproject.toml
.claude/agents/: evaluator.md  generator.md  planner.md
.claude/checklists/: live-smoke-checklist.md  ops-checklist.md  ship-checklist.md
.claude/commands/: phase-finish.md  phase-implement.md  phase-review.md  phase-start.md
.claude/templates/: worklog-template.md
config/: llm_config.yaml  notion_schema.yaml  settings.yaml
config/selectors/: heisenberg.yaml
deploy/: com.heisenberg.agent.plist
design/: heisenberg_agent_design_v1.4.md
docs/: implementation_reference_map.md  operations.md
docs/worklog/: 2026-03-30-add-filter-boundary-tests.md  2026-03-30-sync-hardening-batch1.md  2026-03-31-pipeline-improvements.md
scripts/: capture_detail.py  capture_latest.py  inspect_detail.py  inspect_detail2.py  inspect_latest.py  inspect_latest2.py  inspect_latest3.py
src/heisenberg_agent/: __init__.py  main.py  scheduler.py  settings.py
tests/: conftest.py
tests/contract/: test_detail_parser.py  test_list_parser.py  test_section_parser.py
tests/integration/: test_analyze_save.py  test_collect_save.py  test_pipeline_run.py  test_sync_flow.py
tests/live/: conftest.py  test_collector_smoke.py  test_notion_live_smoke.py  test_pipeline_smoke.py
tests/unit/: test_analyzer_targets.py  test_build_analysis_input.py  test_chroma_adapter.py  test_collector_filter.py  test_file_lock.py  test_hashing.py  test_manual_trigger.py  test_models.py  test_notion_adapter.py  (+5 more)
(+31 files in other folders)
